# connection-diagram-manager

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  file-format.md  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  rust.yml
crates/cdm/: Cargo.toml
crates/cdm/src/: lib.rs
crates/cdm/src/datatypes/: internal_types.rs  util_types.rs
crates/cdm/src/datatypes/file_types/: wire_cable.rs  wire_type.rs
crates/cdm/src/datatypes/internal_types/: cable_type.rs  connector_type.rs  equipment.rs  equipment_type.rs  location.rs  location_type.rs  pathway.rs  pathway_type.rs  svg.rs  term_cable_type.rs  wire_cable.rs  wire_type.rs
crates/cdm_core/: Cargo.toml
crates/cdm_core/src/: bin_logic.rs  config.rs  datatypes.rs  directory_navigator.rs  error.rs  lib.rs  path_utils.rs  pdf_generation.rs  project_config.rs  traits.rs  util_functions.rs
crates/cdm_core/src/datatypes/: color.rs  file_types.rs  internal_types.rs  library_types.rs  project.rs  project_types.rs  schematic_connector.rs  schematic_symbol.rs  svg.rs  unit_helper.rs  util_types.rs
crates/cdm_core/src/datatypes/file_types/: cable.rs  cable_type.rs  connector_type.rs  equipment.rs  equipment_type.rs  location.rs  location_type.rs  pathway.rs  pathway_type.rs  term_cable.rs  term_cable_type.rs  wire.rs  wire_cable.rs  wire_type.rs
crates/cdm_core/src/datatypes/internal_types/: cable.rs  cable_type.rs  connection.rs  connector.rs  connector_type.rs  enclosure_type.rs  equipment.rs  equipment_type.rs  location.rs  location_type.rs  mounting_rail.rs  mounting_rail_type.rs  pathway.rs  pathway_type.rs  physical_location.rs  schematic_symbol_type.rs  svg.rs  term_cable.rs  term_cable_type.rs  terminal_strip.rs  terminal_type.rs  wire.rs  wire_cable.rs  wire_type.rs
crates/cdm_core/src/datatypes/library_types/: cable_type.rs  connector_type.rs  enclosure_type.rs  equipment_type.rs  mounting_rail_type.rs  pathway_type.rs  schematic_symbol_type.rs  term_cable_type.rs  terminal_type.rs  wire_type.rs
crates/cdm_core/src/datatypes/project_types/: cable.rs  connection.rs  connector.rs  enclosure.rs  equipment.rs  mounting_rail.rs  pathway.rs  schematic_symbol.rs  term_cable.rs  terminal_strip.rs  wire.rs
crates/cdm_core/src/datatypes/schematic_connector/: multi_right_angle.rs  right_angle.rs
crates/cdm_core/src/datatypes/svg/: rwxmltree.rs
crates/cdm_core/src/datatypes/unit_helper/: area.rs  cross_sectional_area.rs  electric_potential.rs  length.rs  nominal_wire_size.rs  temperature_interval.rs
crates/cdm_error/: Cargo.toml
crates/cdm_error/src/: lib.rs
crates/cdm_macros/: Cargo.toml
crates/cdm_macros/src/: compare.rs  empty.rs  lib.rs  mergable.rs  merge.rs  partial_empty.rs
crates/cdm_traits/: Cargo.toml
crates/cdm_traits/src/: compare.rs  connector.rs  empty.rs  lib.rs  merge.rs  partial_empty.rs
crates/graph_processing/: Cargo.toml  README.md
crates/graph_processing/src/: lib.rs
crates/paragraph_breaker/: Cargo.toml
crates/paragraph_breaker/src/: lib.rs
crates/pdf_helper/: Cargo.toml
crates/pdf_helper/src/: lib.rs  paper.rs  scale.rs
resources/test/library_tests/: cable_type_test_figure8_aerial_fiber.toml  cable_type_test_full_realistic.toml  cable_type_test_minimal.toml  cable_type_test_minimal_realistic.toml  cable_type_test_multi_layer.toml  cable_type_test_multicore_realistic.toml
resources/test/testproject/: cdm_project.toml
resources/test/testproject/lib/: test_library.toml
resources/test/testproject/src/: library-test-case-for-reading-in-data-not-in-order.txt  library.yaml  library2.txt  test_project.toml
src/: config.rs  datatypes.rs  error.rs  lib.rs  main.rs  paragraph_breaking.rs  pdf_helper.rs  text_utils.rs
src/datatypes/: cable_type.rs  connector_type.rs  equipment.rs  equipment_connector.rs  equipment_type.rs  file_types.rs  internal_types.rs  location_type.rs  pathway_type.rs  svg.rs  term_cable_type.rs  util_types.rs  wire_type.rs
src/datatypes/file_types/: cable.rs  cable_type.rs  connector_type.rs  equipment.rs  equipment_connector.rs  equipment_type.rs  location.rs  location_type.rs  pathway.rs  pathway_type.rs  svg.rs  term_cable_type.rs  wire_cable.rs  wire_type.rs
src/datatypes/internal_types/: cable_type.rs  connector_type.rs  equipment.rs  equipment_connector.rs  equipment_type.rs  location.rs  location_type.rs  pathway.rs  pathway_type.rs  svg.rs  term_cable_type.rs  wire_cable.rs  wire_type.rs
src/pdf_helper/: README.md  fonts.rs  paper.rs
