[workspace]

members = [ "crates/*" ]
resolver = "2"

[workspace.package]
authors = ["Stephen Walker-Weinshenker"]
edition = "2021"
repository = "https://github.com/sww1235/connection-diagram-manager-rust"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
#uom = {version = "~0", default-features = false, features = ["autoconvert", "std", "serde", "si", "bigint", "bigrational", "i128"]}
dimensioned = "~0"
log = "~0"
rustybuzz = "~0"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0"
simple_logger = "~4"
usvg = "~0"
lopdf = "~0"
cdm_macros = {path = "crates/cdm_macros/", version = "~0"}
cdm_traits = {path = "crates/cdm_traits/", version = "~0"}
paragraph_breaker = {path = "crates/paragraph_breaker/", version = "~0"}
pdf_helper = {path = "crates/pdf_helper/", version = "~0"}
#unit_utils = {path = "crates/unit_utils", version = "~0"}

# per uom docs, enabling serde support for bigint and bigrational stuff
#num-rational = { version = "*", features = ["serde"] }
#num-bigint = { version = "*", features = ["serde"] }


#https://stackoverflow.com/a/74545562/3342767
[workspace.lints.rust]
missing_docs = "warn"
[workspace.lints.clippy]
# TODO: remove this. colored has a lower windows-sys version than
# chrono which is causing errors. need colored to update first
# to eliminate clippy spam. Also uncomment line in clippy.toml
# when configuration option is available
multiple_crate_versions = {level = "allow", priority = 2}
correctness = "warn"
suspicious = "warn"
perf = "warn"
cargo = "warn"
pedantic = "warn"
style = "warn"
# restriction lints
arithmetic_side_effects = "warn"
unnecessary_cast = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
char_lit_as_u8 = "warn"
ptr_as_ptr = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
default_numeric_fallback = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
shadow_unrelated = "warn"
string_add = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
