[workspace]

members = [ "crates/*" ]
resolver = "2"

[workspace.package]
authors = ["Stephen Walker-Weinshenker"]
edition = "2024"
repository = "https://github.com/sww1235/connection-diagram-manager-rust"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
uom = { version = "~0.37", default-features = false, features = ["autoconvert", "std", "rational64", "rational32", "bigrational", "try-from", "serde", "si"] }
log = { version = "~0" }
rustybuzz = { version = "~0" }
serde = { version = "~1", features = ["derive"] }
toml = { version = "~0" }
figment = { version = "~0.10", features = ["toml"] }
simple_logger = { version = "~5" }
thiserror = { version = "~2" }
usvg = { version = "~0" }
lopdf = { version = "~0" }
paragraph_breaker = {path = "crates/paragraph_breaker/", version = "~0"}
pdf_helper = {path = "crates/pdf_helper/", version = "~0"}
num-rational = { version = "~0.4", features = ["std", "serde", "num-bigint"] }
num-traits = { version = "~0.2" }
anyhow = { version = "~1" }
pretty_assertions = { version = "~1.4"}


#https://stackoverflow.com/a/74545562/3342767
[workspace.lints.rust]
missing_docs = "warn"
[workspace.lints.clippy]
# have to set the priority on the groups lower to avoid ordering issues
# remove when this has been fixed upstream
# https://rust-lang.github.io/rust-clippy/master/index.html#lint_groups_priority
correctness = { level = "warn", priority = -1}
suspicious = { level = "warn", priority = -1}
perf = { level = "warn", priority = -1}
cargo = { level = "warn", priority = -1}
pedantic = { level = "warn", priority = -1}
style = { level = "warn", priority = -1}
# restriction lints
arithmetic_side_effects = "warn"
unnecessary_cast = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
char_lit_as_u8 = "warn"
ptr_as_ptr = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
default_numeric_fallback = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
shadow_unrelated = "warn"
string_add = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
