[package]
name = "connection_diagram_manager"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Connection Diagram Manager and visualizer"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
clap = { version = "~4", features = ["derive", "unicode", "wrap_help"], optional = true }
dimensioned = "0.8.0"
fltk = { version = "~1", optional = true }
fltk-theme = { version = "~0", optional = true }
log = "~0"
rustybuzz = "~0.7"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0"
simple_logger = "~4"
usvg = "~0"
cdm_macros = {path = "../cdm_macros/", version = "~0"}
cdm_traits = {path = "../cdm_traits/", version = "~0"}

[features]
cli = ["clap"]
gui = ["clap", "fltk", "fltk-theme"]

[lib]
name = "cdm"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]
