[package]
name = "connection_diagram_manager"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Connection Diagram Manager and visualizer"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
clap = { version = "~4", features = ["derive", "unicode", "wrap_help"], optional = true }
fltk = { version = "~1", optional = true }
fltk-theme = { version = "~0", optional = true }
log.workspace = true
rustybuzz.workspace = true
serde.workspace = true
toml.workspace = true
simple_logger.workspace = true
thiserror.workspace = true
uom.workspace = true
num-rational.workspace = true
usvg.workspace = true
pdf_helper.workspace = true
paragraph_breaker.workspace = true
figment.workspace = true
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
toml = {workspace = true, features = ["preserve_order"]}

[features]
default = ["cli"]
cli = ["clap"]
gui = ["clap", "fltk", "fltk-theme"]

[lib]
name = "cdm_core"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]
