[package]
name = "connection_diagram_manager"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Connection Diagram Manager and visualizer"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
clap = { version = "~4", features = ["derive", "unicode", "wrap_help"]}
log.workspace = true
rustybuzz.workspace = true
serde.workspace = true
toml.workspace = true
simple_logger.workspace = true
thiserror.workspace = true
uom.workspace = true
num-rational.workspace = true
num-traits.workspace = true
num-integer.workspace = true
usvg.workspace = true
pdf_helper.workspace = true
paragraph_breaker.workspace = true
figment.workspace = true
anyhow.workspace = true
url.workspace = true
# need to keep all 4 of these crates in sync version wise
miniquad = { version = "~0.4", optional = true}
egui-miniquad = { version = "~0.16", optional = true}
egui = { version = "0.31.1", optional = true}
egui_extras = { version = "0.31.1", optional = true, features = ["gif", "svg"]}

[dev-dependencies]
pretty_assertions.workspace = true
toml.workspace = true

[features]
default = ["cli", "gui"]
cli = []
gui = ["dep:miniquad", "dep:egui-miniquad", "dep:egui", "dep:egui_extras"]

[lib]
name = "cdm_core"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "gui"
path = "src/bin/gui/main.rs"
required-features = ["gui"]
