[package]
name = "cdm_error"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Error handler for Connection Diagram Manager"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
lopdf.workspace = true
simple_logger.workspace = true
usvg.workspace = true
paragraph_breaker.workspace = true
pdf_helper.workspace = true


[lib]
name = "cdm_error"
path = "src/lib.rs"
