[package]
name = "cdm_macros"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Connection Diagram Manager and visualizer"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "~1"
quote = "~1"
syn = "~2"


