[package]
name = "paragraph_breaker"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Connection Diagram Manager and visualizer"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
lopdf.workspace = true
rustybuzz.workspace = true
simple_logger.workspace = true
# uom.workspace = true
dimensioned.workspace = true

[lib]
name = "paragraph_breaker"
path = "src/lib.rs"
