[package]
name = "pdf_helper"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "PDF Helper library for Connection Diagram Manager"
keywords = ["Connection", "Diagram", "Manager", "Visualiser", "wire", "cable", "connections", "wiring", "harness", "CAD"]
categories = ["CAD"]
readme = "README.md"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
lopdf.workspace = true
rustybuzz.workspace = true
simple_logger.workspace = true
usvg.workspace = true
paragraph_breaker.workspace = true
# uom.workspace = true
dimensioned.workspace = true


[lib]
name = "pdf_helper"
path = "src/lib.rs"
